Fixed suggest modal width on small devices

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -304,7 +304,6 @@ div#pageLoader {
 
 .modal {
   .modal-dialog {
-    width: 800px;
     text-align: center;
   }
   .modal-content {
@@ -487,6 +486,10 @@ html body div#site-container div#main div.home-page div.row div.col-md-12 div fo
 }
 @media (max-width: 767px) {
   
+  
+  .fd-btn-left a.freshwidget-theme {
+   top:50%!important; 
+  }
   #footer {
     height:180px;
     bottom: -38px;
